extend Contact editor
add personal information page (job, web-addresses)
add UrlDTO and UriDTO
add getURLs to ContactImpl
add to personal information to navigation

--- a/contact-manager-web/src/main/resources/META-INF/resources/search_columns.jspf
+++ b/contact-manager-web/src/main/resources/META-INF/resources/search_columns.jspf
@@ -3,13 +3,13 @@
     for the main view of the contact manager portlet.
 
     Created:     2013-10-07 14:41 by Christian Berndt
-    Modified:    2017-04-18 11:35 by Stefan Luebbers
+    Modified:    2017-04-21 15:38 by Stefan Luebbers
     Version:     1.1.7
 --%>
 
 <%
-    String company = String.valueOf(contact_.getCompany()))
-    String contactId = String.valueOf(contact_.contactId)
+    String company = String.valueOf(contact_.getCompany()));
+    String contactId = String.valueOf(contact_.contactId);
 %>
 
 <%
