--- a/contact-manager-web/src/main/resources/META-INF/resources/search_columns.jspf
+++ b/contact-manager-web/src/main/resources/META-INF/resources/search_columns.jspf
@@ -3,68 +3,61 @@
     for the main view of the contact manager portlet.
 
     Created:     2013-10-07 14:41 by Christian Berndt
-    Modified:    2017-04-21 15:38 by Stefan Luebbers
-    Version:     1.1.7
+    Modified:    2017-06-19 17:04 by Christian Berndt
+    Version:     1.1.8
 --%>
 
 <%
-    String company = String.valueOf(contact_.getCompany()));
-    String contactId = String.valueOf(contact_.contactId);
+    String[] columns = (String[])request.getAttribute("view.jsp-columns");
 %>
 
 <%
     for (String column : columns) {
 %>
 
-
+<%-- 
 <c:if test='<%="company".equals(column)%>'>
     <liferay-ui:search-container-column-text value="<%= company %>"
         name="company" orderable="true" href="<%=detailURL%>"
         orderableProperty="company_Number_sortable" />
 </c:if>
+--%>
 <c:if test='<%="contact-id".equals(column)%>'>
-    <liferay-ui:search-container-column-text value="<%= contactId %>"
-        name="contact-id" orderable="true" href="<%=detailURL%>"
-        orderableProperty="contactId_Number_sortable" />
+    <liferay-ui:search-container-column-text property="contactId"
+        name="contact-id" orderable="true" href="<%=detailURL%>" />
 </c:if>
+
 <c:if test='<%="create-date".equals(column)%>'>
     <liferay-ui:search-container-column-date property="createDate"
-        name="create-date" orderable="true" href="<%=detailURL%>"
-        orderableProperty="createDate_Number_sortable" />
+        name="create-date" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="email".equals(column)%>'>
-    <liferay-ui:search-container-column-text property="email"
-        name="email" orderable="true" href="<%=detailURL%>"
-        orderableProperty="email_sortable" />
+    <liferay-ui:search-container-column-text property="email.address"
+        name="email" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="full-name".equals(column)%>'>
     <liferay-ui:search-container-column-text property="fullName"
-        name="full-name" orderable="true" href="<%=detailURL%>"
-        orderableProperty="fullName_sortable" />
+        name="full-name" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="modified-date".equals(column)%>'>
     <liferay-ui:search-container-column-date property="modifiedDate"
-        name="modified-date" orderable="true" href="<%=detailURL%>"
-        orderableProperty="modifiedDate_Number_sortable"  />
+        name="modified-date" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="name".equals(column)%>'>
     <liferay-ui:search-container-column-text property="name"
-        name="name" orderable="true" href="<%=detailURL%>"
-        orderableProperty="name_sortable" />
+        name="name" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="phone".equals(column)%>'>
-    <liferay-ui:search-container-column-text property="phone"
-        name="phone" orderable="true" href="<%=detailURL%>"
-        orderableProperty="phone_sortable" />
+    <liferay-ui:search-container-column-text property="phone.number"
+        name="phone" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <c:if test='<%="status".equals(column)%>'>
     <liferay-ui:search-container-column-status property="status"
-        orderable="true" orderableProperty="status_Number_sortable" />
+        orderable="true"/>
 </c:if>
 <c:if test='<%="user-name".equals(column)%>'>
     <liferay-ui:search-container-column-text property="userName"
-        name="user-name" orderable="true" href="<%=detailURL%>"
-        orderableProperty="userName_sortable" />
+        name="user-name" orderable="true" href="<%=detailURL%>" />
 </c:if>
 <%
     }
